--- a/Proyecto2/codigo.html
+++ b/Proyecto2/codigo.html
@@ -166,42 +166,35 @@
   <!-- Imagen principal -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/1.jpg" width="650" height="118" style="display:block;border:none;max-width:650px;max-height:118px;" /></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/limpieza-facial.html"></a><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/1.jpg" width="650" height="618" style="display:block;border:none;max-width:650px;max-height:618px;" /></td>
     </tr>
   </table>
 
   <!-- Segunda imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro.html?attribute_type_product=373%2C368%2C369%2C370%2C371%2C372%2C378"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/2.jpg" width="650" height="438" style="display:block;border:none;max-width:650px;max-height:438px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/lineas/pure-algue.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/2.jpg" width="650" height="438" style="display:block;border:none;max-width:650px;max-height:438px;" /></a></td>
     </tr>
   </table>
 
   <!-- Tercera imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/3.jpg" width="650" height="608" style="display:block;border:none;max-width:650px;max-height:608px;" /></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/lineas/pure-menthe.html"></a><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/3.jpg" width="650" height="608" style="display:block;border:none;max-width:650px;max-height:608px;" /></td>
     </tr>
   </table>
 
   <!-- Cuarta imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/combina-tu-rutina-con-20-dcto-limpiador-facial-serum-facial-o-contorno-de-ojos.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/4.jpg" width="650" height="338" style="display:block;border:none;max-width:650px;max-height:338px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/lineas/pure-camomille.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/4.jpg" width="650" height="338" style="display:block;border:none;max-width:650px;max-height:338px;" /></a></td>
     </tr>
   </table>
 
   <!-- Quinta imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/20-dcto-1-limpiador-facial-1-tratamiento-facial-1.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/5.jpg" width="650" height="338" style="display:block;border:none;max-width:650px;max-height:338px;" /></a></td>
-    </tr>
-  </table>
-
-  <!-- Sexta imagen -->
-  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
-    <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/20-dcto-1-limpiador-facial-1-tratamiento-facial-1.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/6.jpg" width="650" height="338" style="display:block;border:none;max-width:650px;max-height:338px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/lineas/pur-calendula.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/5.jpg" width="650" height="338" style="display:block;border:none;max-width:650px;max-height:338px;" /></a></td>
     </tr>
   </table>
 
@@ -220,7 +213,7 @@
               <table class="social-logos" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto1/10.png" width="24" height="24" border="0" /></a></td>
-                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/9.jpg" width="24" height="24" border="0" /></a></td>
+                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/9.png" width="24" height="24" border="0" /></a></td>
                 </tr>
               </table>
             </td>
