--- a/Proyecto2/codigo.html
+++ b/Proyecto2/codigo.html
@@ -153,12 +153,6 @@
       .social-logos {
         text-align: center;
       }
-      .social-logos img {
-        margin-right: 30px; /* Mucho más espacio horizontal entre los logos */
-        margin-left: 30px;
-        width: 50px; /* Cambia el valor según el tamaño deseado */
-        height: 50px; /* Cambia el valor según el tamaño deseado */
-      }
     </style>
 </head>
 <body marginwidth="0" marginheight="0" offset="0" topmargin="0" leftmargin="0" bgcolor="#ffffff">
@@ -199,29 +193,35 @@
   </table>
 
   <!-- Sección de redes sociales -->
-  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#ffffff">
-    <tr>
-      <td align="center">
-        <table width="650" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#ffffff">
-          <tr>
-            <td class="social-section">
-              SÍGUENOS EN NUESTRAS REDES
-            </td>
-          </tr>
-          <tr>
-            <td align="center">
-              <table class="social-logos" border="0" cellspacing="0" cellpadding="0">
-                <tr>
-                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto1/10.png" width="24" height="24" border="0" /></a></td>
-                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/9.png" width="24" height="24" border="0" /></a></td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#ffffff">
+        <tr>
+        <td align="center">
+            <table width="650" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#ffffff">
+            <tr>
+                <td align="center">
+                <table class="social-logos" border="0" cellspacing="0" cellpadding="0" style="width:100%;">
+                    <tr>
+                    <!-- Ajustamos el ancho de las celdas para que las imágenes ocupen el espacio completo -->
+                    <td style="text-align:right; width:50%;">
+                        <!-- Imagen de Instagram, ajustamos el tamaño -->
+                        <a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank">
+                        <img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/9.png" width="325" height="325" border="0" />
+                        </a>
+                    </td>
+                    <td style="text-align:left; width:50%;">
+                        <!-- Imagen de Facebook, ajustamos el tamaño -->
+                        <a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank">
+                        <img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/10.png" width="325" height="325" border="0" />
+                        </a>
+                    </td>
+                    </tr>
+                </table>
+                </td>
+            </tr>
+            </table>
+        </td>
+        </tr>
+    </table>
 
   <!-- Footer -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#ffffff">
