--- a/Proyecto3/codigo.html
+++ b/Proyecto3/codigo.html
@@ -176,43 +176,37 @@
   <!-- Imagen principal -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/limpieza-facial.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/1.jpg" width="650" height="618" style="display:block;border:none;max-width:650px;max-height:618px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/limpieza-facial.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto3/1.jpg" width="650" height="918" style="display:block;border:none;max-width:650px;max-height:918px;" /></a></td>
     </tr>
   </table>
 
   <!-- Segunda imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/lineas/pure-algue.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/2.jpg" width="650" height="438" style="display:block;border:none;max-width:650px;max-height:438px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/lineas/pure-algue.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto3/2.jpg" width="650" height="438" style="display:block;border:none;max-width:650px;max-height:438px;" /></a></td>
     </tr>
   </table>
 
   <!-- Tercera imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/lineas/pure-menthe.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/3.jpg" width="650" height="608" style="display:block;border:none;max-width:650px;max-height:608px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/lineas/pure-menthe.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto3/3.jpg" width="650" height="608" style="display:block;border:none;max-width:650px;max-height:608px;" /></a></td>
     </tr>
   </table>
 
   <!-- Cuarta imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/lineas/pure-camomille.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/4.jpg" width="650" height="338" style="display:block;border:none;max-width:650px;max-height:338px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/lineas/pure-camomille.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto3/4.jpg" width="650" height="458" style="display:block;border:none;max-width:650px;max-height:458px;" /></a></td>
     </tr>
   </table>
 
-  <!-- Quinta imagen -->
-  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
-    <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro/lineas/pur-calendula.html"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/5.jpg" width="650" height="338" style="display:block;border:none;max-width:650px;max-height:338px;" /></a></td>
-    </tr>
-  </table>
 
   <!-- Sección de redes sociales -->
-  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#A6D4D1">
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" >
     <tr>
       <td align="center">
-        <table width="650" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#A6D4D1">
+        <table width="650" border="0" cellspacing="0" cellpadding="0" align="center" >
           <tr>
             <td class="social-section">
               SÍGUENOS EN NUESTRAS REDES
@@ -222,8 +216,8 @@
             <td align="center">
               <table class="social-logos" border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/10.png" width="24" height="24" border="0" /></a></td>
-                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto2/9.png" width="24" height="24" border="0" /></a></td>
+                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto3/5.png" width="24" height="24" border="0" /></a></td>
+                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto3/6.png" width="24" height="24" border="0" /></a></td>
                 </tr>
               </table>
             </td>
