--- a/Proyecto7/codigo.html
+++ b/Proyecto7/codigo.html
@@ -176,28 +176,46 @@
   <!-- Imagen principal -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto6/1.jpg" width="650" height="958" style="display:block;border:none;max-width:650px;max-height:958px;" /></td>
+      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto7/1.jpg" width="650" height="958" style="display:block;border:none;max-width:650px;max-height:958px;" /></td>
     </tr>
   </table>
 
   <!-- Segunda imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-96090-pure-menthe-exfoliante-purificante-750-ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+Agosto+5&utm_id=limpiadores+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto6/2.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-96090-pure-menthe-exfoliante-purificante-750-ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+Agosto+5&utm_id=limpiadores+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto7/2.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
     </tr>
   </table>
 
   <!-- Tercera imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-97429-tonico-alisante-calendula-200-ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+Agosto+5&utm_id=limpiadores+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto6/3.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-97429-tonico-alisante-calendula-200-ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+Agosto+5&utm_id=limpiadores+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto7/3.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
     </tr>
   </table>
 
   <!-- Cuarta imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-41031-tonico-clarificante-1500-ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+Agosto+5&utm_id=limpiadores+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto6/4.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-41031-tonico-clarificante-1500-ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+Agosto+5&utm_id=limpiadores+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto7/4.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+    </tr>
+  </table>
+  <!-- QUINTA imagen -->
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+    <tr>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-41031-tonico-clarificante-1500-ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+Agosto+5&utm_id=limpiadores+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto7/5.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+    </tr>
+  </table>
+      <!-- SEXTA imagen -->
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+    <tr>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-41031-tonico-clarificante-1500-ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+Agosto+5&utm_id=limpiadores+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto7/6.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+    </tr>
+  </table>
+  <!-- Septima imagen -->
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+    <tr>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-41031-tonico-clarificante-1500-ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+Agosto+5&utm_id=limpiadores+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto7/7.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
     </tr>
   </table>
 
@@ -217,8 +235,8 @@
             <td align="center">
               <table class="social-logos" border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto6/7.jpg" width="24" height="24" border="0" /></a></td>
-                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto6/6.jpg" width="24" height="24" border="0" /></a></td>
+                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto7/8.jpg" width="24" height="24" border="0" /></a></td>
+                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto7/9.jpg" width="24" height="24" border="0" /></a></td>
                 </tr>
               </table>
             </td>
