--- a/Proyecto10/codigo.html
+++ b/Proyecto10/codigo.html
@@ -207,7 +207,12 @@
         <td align="center" valign="top"><a href="https://www.yvesrocher.cl/vinagre-refresh-150ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+2+&utm_id=capilar+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/5.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
       </tr>
     </table>
-
+    <!-- Cuarta imagen -->
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+      <tr>
+        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/vinagre-refresh-150ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+2+&utm_id=capilar+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/6.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      </tr>
+    </table>
 
 
 
@@ -225,8 +230,8 @@
             <td align="center">
               <table class="social-logos" border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/6.jpg" width="30" height="30" border="0" /></a></td>
-                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/7.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/7.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/8.jpg" width="30" height="30" border="0" /></a></td>
                 </tr>
               </table>
             </td>
