--- a/Proyecto11/codigo.html
+++ b/Proyecto11/codigo.html
@@ -176,51 +176,45 @@
   <!-- Imagen principal -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
-    </tr>
-  </table>
-
-
-  <!-- Segunda imagen -->
-  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
-    <tr>
-      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/9.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></td>
+      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
     </tr>
   </table>
 
   <!-- Segunda imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalog/product/view/id/7127/s/elixir-botanique-crema-dia-beauty-shield-multi-proteccion-spf-50-30-ml/category/714/?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+4&utm_id=BD"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/2.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/shampoo-fortalecador-anti-caida-sin-sulfatos-sin-siliconas-300ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+2+&utm_id=capilar+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/2.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
     </tr>
   </table>
 
   <!-- Tercera imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalog/product/view/id/7073/s/yr-00007-gel-contorno-de-ojos-fresco-hidratante-anti-fatiga-150-ml/category/714/?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+4&utm_id=BD"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/3.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/balsamo-botanico-light-reparacion-sin-siliconas-150ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+2+&utm_id=capilar+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/3.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
     </tr>
   </table>
 
   <!-- Cuarta imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/bright-botanical-gel-contorno-de-ojos-iluminador-15-ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+4&utm_id=BD"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/4.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/locion-tratamiento-anti-caspa-cuero-cabelludo-150ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+2+&utm_id=capilar+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/4.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
     </tr>
   </table>
 
     <!-- Cuarta imagen -->
     <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
       <tr>
-        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-97050-pure-menthe-locion-polvo-matificante-150ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+4&utm_id=BD"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/5.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/vinagre-refresh-150ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+2+&utm_id=capilar+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/5.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
       </tr>
     </table>
-    <!-- Cuarta imagen -->
-    <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
-      <tr>
-        <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/6.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></td>
-      </tr>
-    </table>
+
+  <!-- QUINTA imagen -->
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+    <tr>
+      <td align="center" valign="top"><a href= "https://www.yvesrocher.cl/cabello.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+2+&utm_id=capilar+mail"></a><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/6.jpg" width="650" height="300" style="display:block;border:none;max-width:650px;max-height:300px;" /></a></td>
+    </tr>
+  </table>
+
 
 
 
@@ -238,8 +232,8 @@
             <td align="center">
               <table class="social-logos" border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/7.jpg" width="30" height="30" border="0" /></a></td>
-                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto10/8.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/7.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/8.jpg" width="30" height="30" border="0" /></a></td>
                 </tr>
               </table>
             </td>
