--- a/Proyecto11/codigo.html
+++ b/Proyecto11/codigo.html
@@ -161,7 +161,7 @@
         font-family: Montserrat, Arial, sans-serif;
         font-size: 17px; /* Tamaño actualizado */
         font-weight: 900; /* Extrabold */
-        color: #C20E1A;
+        color: #E5B14D;
         text-align: center;
         padding-top: 40px; /* Mucho espacio arriba */
         padding-bottom: 25px; /* Espacio debajo */
@@ -176,42 +176,57 @@
   <!-- Imagen principal -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
+      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto11/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
     </tr>
   </table>
 
   <!-- Segunda imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/shampoo-fortalecador-anti-caida-sin-sulfatos-sin-siliconas-300ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+2+&utm_id=capilar+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/2.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/promociones.html?attribute_type_product=333%2C326%2C327%2C328%2C329%2C331&product_list_limit=24
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto11/2.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
     </tr>
   </table>
 
   <!-- Tercera imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/balsamo-botanico-light-reparacion-sin-siliconas-150ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+2+&utm_id=capilar+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/3.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/promociones.html?attribute_type_product=368%2C369%2C370%2C372%2C373%2C374%2C375%2C376%2C377%2C378&product_list_limit=36
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto11/3.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
     </tr>
   </table>
 
   <!-- Cuarta imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/locion-tratamiento-anti-caspa-cuero-cabelludo-150ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+2+&utm_id=capilar+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/4.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/promociones.html?attribute_type_product=344%2C334%2C335%2C339%2C340%2C341%2C342%2C343%2C345&product_list_limit=24
+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto11/4.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
     </tr>
   </table>
 
     <!-- Cuarta imagen -->
     <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
       <tr>
-        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/vinagre-refresh-150ml.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+2+&utm_id=capilar+mail"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/5.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/promociones.html?attribute_type_product=347%2C346%2C353%2C355%2C356%2C357%2C358%2C359%2C361%2C362%2C363&product_list_limit=36
+
+          "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto11/5.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
       </tr>
     </table>
 
   <!-- QUINTA imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href= "https://www.yvesrocher.cl/cabello.html?utm_source=meta+&utm_medium=email&utm_campaign=Mail+septiembre+2+&utm_id=capilar+mail"></a><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/6.jpg" width="650" height="300" style="display:block;border:none;max-width:650px;max-height:300px;" /></a></td>
+      <td align="center" valign="top"><a href= " https://www.yvesrocher.cl/promociones.html?attribute_type_product=366%2C367&product_list_limit=36
+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto11/6.jpg" width="650" height="300" style="display:block;border:none;max-width:650px;max-height:300px;" /></a></td>
+    </tr>
+  </table>
+
+  <!-- QUINTA imagen -->
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+    <tr>
+      <td align="center" valign="top"><a href= "https://www.yvesrocher.cl/catalogsearch/result/?q=monoi"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto11/7.jpg" width="650" height="300" style="display:block;border:none;max-width:650px;max-height:300px;" /></a></td>
     </tr>
   </table>
 
@@ -232,8 +247,8 @@
             <td align="center">
               <table class="social-logos" border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/7.jpg" width="30" height="30" border="0" /></a></td>
-                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto9/8.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto11/10.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto11/9.jpg" width="30" height="30" border="0" /></a></td>
                 </tr>
               </table>
             </td>
