--- a/Proyecto14/codigo.html
+++ b/Proyecto14/codigo.html
@@ -173,16 +173,46 @@
 </head>
 <body marginwidth="0" marginheight="0" offset="0" topmargin="0" leftmargin="0" bgcolor="#ffffff">
 
+  <!-- Imagen principal -->
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+    <tr>
+      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto12/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
+    </tr>
+  </table>
 
   <!-- Segunda imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
       <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalog/product/view/id/7214/s/labial-en-barra-vegano-rouge-elixir-mat-1/category/599/?utm_source=meta+&utm_medium=mail+octubre+2&utm_campaign=labial&utm_id=mail+octubre+
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto13/2.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto12/2.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
     </tr>
   </table>
 
+  <!-- Tercera imagen -->
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+    <tr>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalog/product/view/id/7214/s/labial-en-barra-vegano-rouge-elixir-mat-1/category/599/?utm_source=meta+&utm_medium=mail+octubre+2&utm_campaign=labial&utm_id=mail+octubre+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto12/3.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+    </tr>
+  </table>
 
+  <!-- Cuarta imagen -->
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+    <tr>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalog/product/view/id/7214/s/labial-en-barra-vegano-rouge-elixir-mat-1/category/599/?utm_source=meta+&utm_medium=mail+octubre+2&utm_campaign=labial&utm_id=mail+octubre+
+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto12/4.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+    </tr>
+  </table>
+
+    <!-- Cuarta imagen -->
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+      <tr>
+        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalog/product/view/id/7214/s/labial-en-barra-vegano-rouge-elixir-mat-1/category/599/?utm_source=meta+&utm_medium=mail+octubre+2&utm_campaign=labial&utm_id=mail+octubre+
+
+          "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto12/5.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      </tr>
+    </table>
 
 
 
